@@ -3006,7 +3006,8 @@ See also: MONEY, give
 
 See also: @inprefix, AUDIBLE, @listen
 & @ps
-  @ps[/<switch>] [*<player>]
+  @ps[/<switch>] [<player>]
+  @ps <pid>
   
   @ps is a useful command for MUSHers.  It lists all commands currently on
   your 'to be executed' queue, thus allowing you to identify infinite (or
@@ -3019,8 +3020,10 @@ See also: @inprefix, AUDIBLE, @listen
   the /all switch, and see the full queue. They may also specify a player.
   @ps/summary just displays the queue totals for the whole queue.
   @ps/quick displays the queue totals for just your queue.
+  
+  With a <pid> argument, @ps shows information on a single queue entry.
 
-  Each line includes the proccess id of the queue entry, the object
+  Each line includes the process id of the queue entry, the object
   and attribute being used as a semaphore (If any), the number of
   seconds left before it executes (For waits and semaphores), the
   object that is going to execute the entry, and the command.
